examples/bad/main_multiple.latf
int main() {
    return 0;
}

int main() { // error
    return 0;
}